--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   },
   "homepage": "https://github.com/npsaunders/expressTemplate#readme",
   "dependencies": {
-    "method-override": "^3.0.0"
+    "ejs": "^3.1.8",
+    "express": "^4.18.1",
+    "method-override": "^3.0.0",
+    "mongoose": "^6.5.4"
   }
 }
